@@ -1059,3 +1059,5 @@ ATS V1.5:
     BUG-53174. HADOOP-12374. Description of hdfs expunge command is confusing.
     (Weiwei Yang)
 
+    HDFS-8676. Delayed rolling upgrade finalization can cause heartbeat
+    expiration. (Walter Su via kihwal)
